# fem3d-rust

./: Cargo.toml  README.md
docs/: index.html
reference/: chatgpt.md  claude.md  gemini.md
src/: lib.rs
